<resources>
    <string name="app_name">Taskmate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_create_board">New Board</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="save_action">Save</string>
    <string name="name">Name</string>
    <string name="description">Desription</string>

    <string-array name="board_statuses">
        <item>Backlog</item>
        <item>Todo</item>
        <item>In progress</item>
        <item>Done</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backlog">Backlog</string>
    <string name="todo">Todo</string>
    <string name="in_progress">In progress</string>
    <string name="done">Done</string>
    <string name="log_out">Log out</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>